<resources>
    <string name="app_name">Shopping App</string>
    <string name="content">With the idea of imparting programming
      knowledge, Mr. Sandeep Jain, an IIT Roorkee alumnus started a
      dream, GeeksforGeeks. Whether programming excites you or you feel
      stifled, wondering how to prepare for interview questions or how to
      ace data structures and algorithms, GeeksforGeeks is a one-stop solution.
      With every tick of time, we are adding arrows in our quiver. From articles
      on various computer science subjects to programming problems for practice,
      from basic to premium courses, from technologies to entrance examinations,
      we have been building ample content with superior quality. In a short span,
      we have built a community of 1 Million+ Geeks around the world, 20,000+
      Contributors and 500+ Campus Ambassadors in various colleges across the nation.
      Our success stories include a lot of students who benefitted in their placements
      and landed jobs at tech giants. Our vision is to build a gigantic network of
      geeks and we are only a fraction of it yet.
  </string>
    <string name="read_more"><u>Read more</u></string>
    <string name="vendor"><b>Vendor</b></string>
    <string name="plan"><b>Plan</b></string>
    <string name="dress_idea"><b>Dress Idea</b></string>
    <string name="song"><b>Song</b></string>
    <string name="blog"><b>Blog</b></string>
    <string name="pricing_info"><u>Pricing Info</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="user_registration"><u>User Registration</u></string>
    <string name="register_new_vendor"><u>Register new vendor</u></string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="title_activity_payment_select">PaymentSelect</string>
</resources>